# avm

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.md  ROADMAP.md
AVMPI/: AVMPI.h  CMakeLists.txt  PosixMMgcPortUtils.cpp  float4Support.cpp
MMgc/: CMakeLists.txt  GC.cpp  MMgc.h  ZCT.cpp
VMPI/: CMakeLists.txt  VMPI.h  WinPortUtils.cpp
abcasm/: CMakeLists.txt
aot/: AOTCompiler.cpp  AOTStubs.h  (+2 more)
asc/: CMakeLists.txt
core/: CMakeLists.txt  CodegenLIR.cpp  avmfeatures.as  builtin.as  errorgen.xml  exec.cpp
core/include/core/: CodegenLIR.h  avmfeatures.h  avmplus.h
core/src/: AbcData.cpp  AbcEnv.cpp  AbcParser.cpp  ActionBlockConstants.cpp  ArrayClass.cpp  ArrayObject.cpp  AvmCore.cpp  AvmLog.cpp  AvmPlusScriptableObject.cpp  AvmSerializer.cpp  BigInteger.cpp  BooleanClass.cpp  BuiltinNatives.h  BuiltinTraits.cpp  ByteArray.as  ByteArrayGlue.cpp  CdeclThunk.cpp  Channels.cpp  ClassClass.cpp  ClassClosure.cpp  CodegenLIR.cpp  Coder.cpp  ConcurrencyGlue.cpp  DataIO.cpp  Date.cpp  DateClass.cpp  DateObject.cpp  Deopt-CL.cpp  Deopt.cpp  DescribeTypeClass.cpp  DictionaryGlue.cpp  Domain.cpp  DomainEnv.cpp  DomainMgr.cpp  E4XNode.cpp  ErrorClass.cpp  ErrorConstants.cpp  Exception.cpp  FixedHeapUtils.cpp  Float4Class.cpp  (+77 more)
eval/: CMakeLists.txt  eval-abc.cpp  eval-avmplus.cpp  eval-cogen-expr.cpp  eval-cogen-stmt.cpp  eval-cogen.cpp  eval-compile.cpp  eval-lex-xml.cpp  eval-lex.cpp  eval-parse-config.cpp  eval-parse-expr.cpp  eval-parse-stmt.cpp  eval-parse-xml.cpp  eval-parse.cpp  eval-unicode.cpp  eval-util.cpp
halfmoon/: CMakeLists.txt  hm-deoptimizer.h  hm-main.h
halfmoon/profiler/: profiler-liremitter.cpp  profiler-methodprofile.cpp  profiler-methodprofile.h  profiler.h
nanojit/: Allocator.h  Assembler.cpp  CMakeLists.txt  Containers.h  NativeX64.cpp  nanojit.h  njconfig.h
other-licenses/zlib/: CMakeLists.txt
pcre/: CMakeLists.txt  pcre_chartables.cpp  pcre_compile.cpp  pcre_config.cpp  pcre_exec.cpp  pcre_fullinfo.cpp  pcre_get.cpp  pcre_globals.cpp  pcre_info.cpp  pcre_maketables.cpp  pcre_newline.cpp  pcre_ord2utf8.cpp  pcre_refcount.cpp  pcre_study.cpp  pcre_tables.cpp  pcre_try_flipped.cpp  pcre_valid_utf8.cpp  pcre_version.cpp  pcre_xclass.cpp
platform/: CMakeLists.txt
platform/arm/: MathUtilsUnix.cpp  OSDepUnix.cpp
platform/mac/: CMakeLists.txt  mac-platform.h
platform/symbian/: MathUtilsSymbian.cpp  OSDepSymbian.cpp  symbian-platform.h
platform/unix/: CMakeLists.txt  MathUtilsSolaris.cpp  OSDepUnix.cpp  unix-platform.h  unixcpuid.cpp
platform/win32/: CMakeLists.txt  MathUtilsWin.cpp  NativeFunctionWin.cpp  OSDepWin.cpp  Vtune.cpp  coff.cpp  win32-platform.h  win32setjmp.cpp
platform/winrt/: OSDepWinRT.cpp
shell/: CMakeLists.txt  Platform.cpp  Platform.h  PosixPartialPlatform.cpp  PosixPartialPlatform.h  SystemClass.cpp  avmshell.cpp  avmshell.h  avmshellMac.cpp  avmshellUnix.cpp  avmshellWin.cpp  shell.as
shell/include/shell/: avmshell.h
shell/src/: ConsoleOutputStream.cpp  DebugCLI.cpp  DomainClass.cpp  File.h  FileClass.cpp  FileInputStream.cpp  Platform.h  ShellCore.cpp  ShellCore.h  ShellWorkerDomainGlue.cpp  ShellWorkerGlue.cpp  SystemClass.cpp  Worker.as  avmshell.cpp  avmshellMac.cpp  avmshellSymbian.cpp  avmshellUnix.cpp  avmshellWin.cpp  shell_toplevel.as  swf.cpp
shell/test/: shell_test.as
test/: .gitignore  CMakeLists.txt  avm_test.cmake
test/acceptance/: Assert.as  CMakeLists.txt  README.md  Utils.as  abc_add_test.cmake  abs_add_test.cmake  as3_add_test.cmake  as3_find_tests.cmake  find_tests.cmake
test/acceptance/abcasm/: CMakeLists.txt  helper.as
test/acceptance/as3/: CMakeLists.txt
test/acceptance/asc/: CMakeLists.txt  namespace-parameter-null-default.as
test/acceptance/e4x/: CMakeLists.txt
test/acceptance/ecma3/: CMakeLists.txt
test/acceptance/misc/: CMakeLists.txt
test/acceptance/mmgc/: CMakeLists.txt
test/acceptance/mops/: CMakeLists.txt
test/acceptance/recursion/: CMakeLists.txt
test/acceptance/regress/: CMakeLists.txt
test/acceptance/spidermonkey/: CMakeLists.txt  shell.as
test/acceptance/versioning/: CMakeLists.txt
test/cmdline/: CMakeLists.txt  arguments.cmake  cmdline_test.cmake  debugger.cmake  repl.cmake  selftest.cmake  test_cmdline.cmake
test/cmdline/testdata/: exec.as
test/eval/: CMakeLists.txt  eval_test.cmake
test/eval/Basic/: argument-lists.as  arguments.as  array-constructor.as  assign-operators-failing.as  assign-operators.as  basic-object-reference.as  binary-operators.as  break-label-statement.as  break-statement.as  comma-paren-expression.as  conditional-operator.as  continue-label-statement.as  continue-statement.as  delete-prefix.as  do-statement.as  e4x.as  fast-switches.as  for-each-in-statement.as  for-in-init.as  for-in-statement.as  for-statement.as  function-if-return.as  global-const.as  global-var.as  include-directive.as  literal-expressions.as  nested-function.as  prototype.as  same-function-twice.as  scope.as  string-constructor.as  string-literal.as  switch-statement.as  this-expression.as  toString.as  try-catch-finally-statement.as  unary-operators.as  unicode.as  valueOf.as  vector-failing.as  (+6 more)
test/performance/: CMakeLists.txt  report-CDash.as  report-Default.as
test/performance/FPBench/: CMakeLists.txt
test/performance/asmicro/: CMakeLists.txt  driver.as
test/performance/floating_point/: CMakeLists.txt
test/performance/jsbench/: CMakeLists.txt  JGFSearchBench.as
test/performance/jsmicro/: CMakeLists.txt  driver.js  html-prefix.js
test/performance/language/: CMakeLists.txt
test/performance/misc/: CMakeLists.txt  abcasm-driver.as  boids-hack.as  boids.as  driver.as  game-of-life.as  loop-backward-bytearray-unrolled.as  loop-backward-bytearray.as  loop-forward-bytearray-unrolled.as  loop-forward-bytearray.as  loop-forward-mops-unrolled.abs  loop-forward-mops.abs  loop-forward-vector-unrolled.as  loop-forward-vector.as  primes.as
test/performance/mmgc/: CMakeLists.txt  gcbench.as  ofib-rc.as  ofib.as  sfib.as
test/sanity/: CMakeLists.txt
vmbase/test/: CMakeLists.txt  concurrency.cpp  safepoints.cpp  threads.cpp
(+156 files in other folders)
