cmake_minimum_required(VERSION 3.14)
project(avm)

set(CMAKE_CXX_STANDARD 11)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)

find_package(ASC)
find_package(ABCASM)

if (CMAKE_HOST_WIN32)
    enable_language(ASM_MASM)
    add_compile_definitions(WIN32)
    add_compile_definitions(_M_X64)
elseif (CMAKE_HOST_APPLE)
    add_compile_definitions(_MAC)
elseif (CMAKE_HOST_UNIX)
    add_compile_definitions(UNIX)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    find_package(Threads REQUIRED)
endif ()

include(CTest)
include(GoogleTest)

add_compile_definitions(AVMSHELL_BUILD)
add_compile_definitions(AVMFEATURE_DEBUGGER)
add_compile_definitions(AVMFEATURE_HALFMOON)

add_subdirectory(core)
add_subdirectory(platform)
add_subdirectory(extensions)
add_subdirectory(VMPI)
add_subdirectory(AVMPI)
add_subdirectory(vmbase)
add_subdirectory(shell)
add_subdirectory(MMgc)
add_subdirectory(eval)
add_subdirectory(pcre)
add_subdirectory(other-licenses/lzma)
add_subdirectory(other-licenses/zlib)
add_subdirectory(nanojit)
add_subdirectory(halfmoon)

if (BUILD_TESTING)
    add_subdirectory(test)

    set(BUILD_GMOCK OFF)
    set(INSTALL_GTEST OFF)
    if (CMAKE_HOST_WIN32)
        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    endif()
    add_subdirectory(third_party/gtest)
endif()
