add_library(halfmoon
        hm-abcbuilder.cpp
        hm-abcgraph.cpp
        hm-cleaner.cpp
        hm-constraints.cpp
        hm-dead.cpp
        hm-debug.cpp
        hm-deoptimizer.cpp
        hm-bailouts.cpp
        hm-dominatortree.cpp
        hm-exec.cpp
        hm-identityanalyzer.cpp
        hm-inline.cpp
        hm-instrfactory.cpp
        hm-instrgraph.cpp
        hm-interpreter.cpp
        hm-liremitter.cpp
        hm-models.cpp
        hm-prettyprint.cpp
        hm-profiler.cpp
        hm-schedulers.cpp
        hm-specializer.cpp
        hm-stubs.cpp
        hm-templatebuilder.cpp
        hm-typeanalyzer.cpp
        hm-typeinference.cpp
        hm-types.cpp
        hm-valnum.cpp
        hm-check.cpp
        hm-main.cpp
        hm-jitmanager.cpp
        hm-jitwriter.cpp
        profiler/profiler-methodprofile.cpp
        profiler/profiler-liremitter.cpp
        profiler/profiler-profiledstate.cpp)

target_link_libraries(halfmoon core)
target_include_directories(halfmoon PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/profiler)